🤖 Committed by Nick.Schonning@tbs-sct.gc.ca

--- a/_data/code/municipal/city-of-sault-ste-marie-on.yml
+++ b/_data/code/municipal/city-of-sault-ste-marie-on.yml
@@ -26,9 +26,11 @@ releases:
       fr: 'https://github.com/cityssm/mpacParser'
     tags:
       en:
-        - mpac property tax
+        - mpac
+        - property tax
       fr:
-        - sefm taxe propriété
+        - sefm
+        - taxe propriété
     languages:
       - Java
     status: Maintained
