--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -77,8 +77,8 @@ releases:
       fr:
         - Site Web
     team:
-      en: Canadian Digital Services
-      fr: Services numériques Canadiens
+      en: Canadian Digital Service
+      fr: Service numérique canadien
   - contact:
       email: wet-boew@tbs-sct.gc.ca
     date:
