--- a/_data/code/municipal/city-of-sault-ste-marie-on.yml
+++ b/_data/code/municipal/city-of-sault-ste-marie-on.yml
@@ -7,11 +7,11 @@ releases:
       name: Dan Gowans
     date:
       created: '2017-12-06'
-      metadataLastUpdated: '2020-01-07'
+      metadataLastUpdated: '2020-01-08'
     description:
       whatItDoes:
-        en: Parse the MPAC year end tax file.
-        fr: Analyser le fichier d'impôt de fin d'année de la SEFM.
+        en: Parse the Municipal Property Assessment Corporation (MPAC) year end tax file.
+        fr: Analyser le fichier d'impôt de fin d'année de la Société d'évaluation foncière des municipalité (SEFM).
     category: '43232300'
     name:
       en: mpacParser
@@ -26,11 +26,11 @@ releases:
       fr: 'https://github.com/cityssm/mpacParser'
     tags:
       en:
-        - mpac
-        - property tax
+        - MPAC
+        - Taxes
       fr:
-        - sefm
-        - taxe propriété
+        - SÉFM
+        - Taxes
     languages:
       - Java
     status: Maintained
