--- a/_data/code/provincial/bc.yml
+++ b/_data/code/provincial/bc.yml
@@ -35,7 +35,7 @@ releases:
       email: todd.wilson@gov.bc.ca
     date:
       created: '2015-04-29'
-      metadataLastUpdated: '2019-05-10'
+      metadataLastUpdated: '2020-01-08'
     description:
       whatItDoes:
         en: >-
@@ -61,9 +61,11 @@ releases:
       fr: 'https://github.com/bcgov/gwells'
     tags:
       en:
-        - groundwater-data
+        - Groundwater
+        - Data
       fr:
-        - données-eaux souterraines
+        - Eau souterraine
+        - Données
     languages:
       - JavaScript
     status: Maintained
