--- a/_data/software/qgis.yml
+++ b/_data/software/qgis.yml
@@ -2,8 +2,8 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: A Free and Open Source Geographic Information System.
-    fr: Système d'Information Géographique Libre et Open Source.
+    en: A Free and Open Source Geographic Information System (GIS).
+    fr: Système d'Information Géographique (SIG) Libre et Open Source.
 category: '43232500'
 homepageURL:
   en: 'https://qgis.org/en/site/'
@@ -18,9 +18,9 @@ name:
   fr: QGIS
 tags:
   en:
-    - gis
+    - GIS
   fr:
-    - sig
+    - SIG
 administrations:
   - adminCode: statcan
     uses:
