--- a/_data/code/municipal/city-of-sault-ste-marie-on.yml
+++ b/_data/code/municipal/city-of-sault-ste-marie-on.yml
@@ -72,3 +72,56 @@ releases:
       fr:
         - Lottery
     status: Alpha
+  - contact:
+      email: d.gowans@cityssm.on.ca
+      name: Dan Gowans
+    date:
+      created: '2018-12-13'
+      metadataLastUpdated: '2020-01-10'
+    description:
+      whatItDoes:
+        en: >-
+          Secures PDF documents by making floating redactions and form entries
+          permanent.
+        fr: >-
+          Sécurise les documents PDF en rendant permanentes les rédactions
+          flottantes et les entrées de formulaire.
+      howItWorks:
+        en: >-
+          The tool flattens PDF documents by taking a picture of each page, then
+          creating a new PDF with the images.
+        fr: >-
+          L'outil aplatit les documents PDF en prenant une photo de chaque page,
+          puis en créant un nouveau PDF avec les images.
+    category: '43231500'
+    name:
+      en: pdfFlattener
+      fr: pdfFlattener
+    licences:
+      - URL:
+          en: 'https://github.com/cityssm/pdfFlattener/blob/master/LICENSE'
+          fr: 'https://github.com/cityssm/pdfFlattener/blob/master/LICENSE'
+        spdxID: Apache-2.0
+    repositoryURL:
+      en: 'https://github.com/cityssm/pdfFlattener'
+      fr: 'https://github.com/cityssm/pdfFlattener'
+    tags:
+      en:
+        - pdf
+        - freedom of information
+      fr:
+        - pdf
+        - la liberté d'information
+    downloadURL:
+      en: 'https://github.com/cityssm/pdfFlattener/releases'
+      fr: 'https://github.com/cityssm/pdfFlattener/releases'
+    languages:
+      - Java
+    relatedCode:
+      - URL:
+          en: 'https://pdfbox.apache.org/'
+          fr: 'https://pdfbox.apache.org/'
+        name:
+          en: Apache PDFBox
+          fr: Apache PDFBox
+    status: Maintained
