🤖 Committed by vivian.nobrega@tbs-sct.gc.ca

--- a/_data/software/r.yml
+++ b/_data/software/r.yml
@@ -3,13 +3,12 @@ schemaVersion: '1.0'
 description:
   whatItDoes:
     en: >-
-      R is a programming language environment for statistical
-      computing and graphics supported by the R Foundation for Statistical
-      Computing.
+      R is a programming language environment for statistical computing and
+      graphics supported by the R Foundation for Statistical Computing.
     fr: >-
-      R est un langage de programmation et un environnement pour
-      le calcul statistique et les graphiques pris en charge par la Fondation R
-      pour le calcul statistique.
+      R est un langage de programmation et un environnement pour le calcul
+      statistique et les graphiques pris en charge par la Fondation R pour le
+      calcul statistique.
 category: '43232400'
 homepageURL:
   en: 'https://www.r-project.org/'
@@ -36,3 +35,11 @@ administrations:
         date:
           started: '2019-09-24'
           metadataLastUpdated: '2019-09-24'
+  - adminCode: aafc-aac
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: AAFC-AAC
+        date:
+          started: '1900-01-01'
+          metadataLastUpdated: '2020-01-14'
