--- a/_data/software/python.yml
+++ b/_data/software/python.yml
@@ -34,3 +34,11 @@ administrations:
         date:
           started: '2019-09-24'
           metadataLastUpdated: '2019-09-24'
+  - adminCode: aafc-aac
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: AAFC-AAC
+        date:
+          started: '1900-01-01'
+          metadataLastUpdated: '2020-01-14'
