--- a/_data/design/test.yml
+++ b/_data/design/test.yml
@@ -6,7 +6,7 @@ description:
       Test
     fr: >-
       Test
-category: 'Test'
+category: '43232300'
 homepageURL:
   en: 'https://accumulo.apache.org/'
   fr: 'https://accumulo.apache.org/'
