Updates to documentation and open design

--- a/_data/forms/config-research.yml
+++ b/_data/forms/config-research.yml
@@ -3,7 +3,7 @@
 id: research
 
 formGroups:
-  - preset: selectSoftware
+  - preset: selectResearch
   - preset: description
   - preset: category
   - preset: tags
