Minor fixes to open-research

--- a/_data_templates/research_mandatory.yml
+++ b/_data_templates/research_mandatory.yml
@@ -1,6 +1,6 @@
 ---
 schemaVersion: '1.0'
-escription:
+description:
   whatItDoes:
     en: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     fr: Quisque bibendum ante ligula, porta vestibulum enim egestas vel.
