Added validation so closing date in partnership form can't be before start date

--- a/_data/forms/config-partnership.yml
+++ b/_data/forms/config-partnership.yml
@@ -23,6 +23,6 @@ formGroups:
         param: {type: date, rule: dateISO}
       - widget: string
         title: closed
-        param: {type: date, rule: dateISO}
+        param: {type: date, rule: dateISO, rule: invalid-closingdate}
   - preset: partners
   - preset: empty
