--- a/_data/forms/rules.yml
+++ b/_data/forms/rules.yml
@@ -4,3 +4,4 @@ phone: data-rule-custom-phone
 dateISO: data-rule-dateISO
 alphanum-space: data-rule-alphanum-space-en-fr
 unique-newadmincode: data-rule-unique-newadmincode
+invalid-closingdate: data-rule-invalid-closingdate
