Fix team filter in partnershipTable and more tests

--- a/_data/partnership/federal/test4.yml
+++ b/_data/partnership/federal/test4.yml
@@ -10,7 +10,7 @@ description:
       Test
     fr: >-
       Test
-category: '43232300'
+category: '43232700'
 name:
   en: Test4
   fr: Test4
@@ -26,3 +26,4 @@ date:
 partners:
   - adminCode: city-of-ottawa-on
     email: free@city.ottawa.on.ca
+    name: J
