working on javascript to add ability to add more uses

--- a/_data/software/elgg.yml
+++ b/_data/software/elgg.yml
@@ -38,7 +38,7 @@ administrations:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-13'
       - contact:
-          email: ilia.salem@tbs-sct.gc.ca
+          email: barbara@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-13'
