--- a/_data/software/elgg.yml
+++ b/_data/software/elgg.yml
@@ -42,3 +42,14 @@ administrations:
         date:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-13'
+  - adminCode: elections
+    uses:
+      - contact:
+          email: sadf@asdf.com
+          name: Fabrice Ralph
+        date:
+          started: '2020-01-08'
+          metadataLastUpdated: '2020-01-24'
+        team:
+          en: asdfasdf
+          fr: asdf
