--- a/_data/software/elgg.yml
+++ b/_data/software/elgg.yml
@@ -36,9 +36,12 @@ administrations:
           email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
-          metadataLastUpdated: '2019-05-13'
+          metadataLastUpdated: '2020-01-24'
       - contact:
           email: ilia.salem@tbs-sct.gc.ca
         date:
           started: '2019-05-06'
-          metadataLastUpdated: '2019-05-13'
+          metadataLastUpdated: '2020-01-24'
+        team:
+          en: asdf
+          fr: asdf
