--- a/_data/software/ruby.yml
+++ b/_data/software/ruby.yml
@@ -30,3 +30,14 @@ administrations:
         date:
           started: '1900-01-01'
           metadataLastUpdated: '2020-01-30'
+  - adminCode: tbs-sct
+    uses:
+      - contact:
+          email: EA.AE@tbs-sct.gc.ca
+          name: Enterprise Architecture
+        date:
+          started: '2020-01-01'
+          metadataLastUpdated: '2020-01-30'
+        team:
+          en: Enterprise Strategic Planning
+          fr: Planification stratégique intégrée
