--- a/_data/software/mediawiki.yml
+++ b/_data/software/mediawiki.yml
@@ -2,7 +2,7 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: Wiki package written in PHP, originally for use on Wikipedia.
+    en: 'Wiki package written in PHP, originally for use on Wikipedia.'
     fr: Ensemble Wiki développé à l'origine pour Wikipédia.
 category: '43232100'
 homepageURL:
@@ -36,3 +36,11 @@ administrations:
         date:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-16'
+  - adminCode: eccc
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: ECCC-ECCC
+        date:
+          started: '2010-01-01'
+          metadataLastUpdated: '2020-01-31'
