🤖 Committed by vivian.nobrega@tbs-sct.gc.ca

--- a/_data/software/r.yml
+++ b/_data/software/r.yml
@@ -43,3 +43,11 @@ administrations:
         date:
           started: '1900-01-01'
           metadataLastUpdated: '2020-01-14'
+  - adminCode: eccc
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: ECCC-ECCC
+        date:
+          started: '2010-01-01'
+          metadataLastUpdated: '2020-01-31'
