--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "open-licences": "licensee --errors-only",
     "prettify": "eslint assets/js/src/** --fix",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "cypress": "^3.4.1",
     "jest": "^25.1.0"
   }
 }
