--- a/_data/forms/config-software.yml
+++ b/_data/forms/config-software.yml
@@ -11,18 +11,7 @@ formGroups:
     param: {type: url}
   - preset: licences
     param: {more: true}
-  - preset: empty
-    title: administrations
-    param: {start: true}
-  - preset: adminCode
-  - preset: team
-  - preset: empty
-    title: uses
-    param: {start: true}
-  - preset: contact
-    param: {phone: false}
-  - widget: string
-    title: date
-    param: {type: date, rule: dateISO}
+  - preset: uses
+    param: {more: true}
   - preset: empty
   - preset: empty
