--- a/_data/forms/config-design.yml
+++ b/_data/forms/config-design.yml
@@ -9,8 +9,7 @@ formGroups:
   - preset: adminCode  
   - preset: selectDesign
   - preset: description
-  - preset: category
-  - preset: tags
+  - preset: designType
   - preset: homepageURL
     param: {type: url}
   - preset: licences
