--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint assets/js/src/**",
     "open-licences": "licensee --errors-only",
     "prettify": "eslint assets/js/src/** --fix",
-    "test": "npm run lint && npm run open-licences"
+    "test": "npm run lint && npm run open-licences",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "licensee": "^7.0.3",
     "prettier": "^1.18.2"
+  },
+  "dependencies": {
+    "cypress": "^4.0.1"
   }
 }
