Added status field

--- a/_data/forms/config-design.yml
+++ b/_data/forms/config-design.yml
@@ -23,5 +23,5 @@ formGroups:
   - widget: string
     title: date
     param: {type: date, rule: dateISO}
-  - preset: empty
+  - preset: designStatus
   - preset: empty
