Still attempting to fix

--- a/_data/forms/config-design.yml
+++ b/_data/forms/config-design.yml
@@ -24,3 +24,5 @@ formGroups:
     title: date
     param: {type: date, rule: dateISO}
   - preset: designStatus
+  - preset: empty
+  - preset: empty
