Removed designStatus include and added param to status include

--- a/_data/forms/config-code.yml
+++ b/_data/forms/config-code.yml
@@ -10,6 +10,7 @@ formGroups:
   - preset: selectCode
   - preset: team
   - preset: status
+    param: {design: false}
   - preset: description
   - preset: category
   - preset: tags
