Modify what it does? Research subject and how it work? to Abstract
Co-authored-by: fnduister@gmail.com

--- a/_data/forms/config-research.yml
+++ b/_data/forms/config-research.yml
@@ -9,6 +9,7 @@ formGroups:
   - preset: adminCode
   - preset: selectResearch
   - preset: description
+    param: {model: true}
   - preset: category
   - preset: tags
   - preset: homepageURL
