--- a/_data/software/drupal.yml
+++ b/_data/software/drupal.yml
@@ -57,3 +57,11 @@ administrations:
         date:
           started: '1900-01-01'
           metadataLastUpdated: '2019-10-11'
+  - adminCode: pmo-cpm
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: 'https://pm.gc.ca/en/connect/website-feedback'
+        date:
+          started: '2016-07-14'
+          metadataLastUpdated: '2020-02-17'
