--- a/_data/software/drupal.yml
+++ b/_data/software/drupal.yml
@@ -57,3 +57,11 @@ administrations:
         date:
           started: '1900-01-01'
           metadataLastUpdated: '2019-10-11'
+  - adminCode: tpsgc-pwgsc
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: 'https://buyandsell.gc.ca/about-us/feedback'
+        date:
+          started: '2015-01-27'
+          metadataLastUpdated: '2020-02-18'
