--- a/_data/software/nvda.yml
+++ b/_data/software/nvda.yml
@@ -35,3 +35,11 @@ administrations:
         date:
           started: '1900-01-01'
           metadataLastUpdated: '2020-01-14'
+  - adminCode: aafc-aac
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: AAFC-AAC
+        date:
+          started: '1900-01-01'
+          metadataLastUpdated: '2020-02-18'
