--- a/_data/software/drupal.yml
+++ b/_data/software/drupal.yml
@@ -57,3 +57,11 @@ administrations:
         date:
           started: '1900-01-01'
           metadataLastUpdated: '2019-10-11'
+  - adminCode: nrc-cnrc
+    uses:
+      - contact:
+          email: noreply@canada.ca
+          name: NRCan
+        date:
+          started: '2017-01-01'
+          metadataLastUpdated: '2020-02-18'
