--- a/_data/forms/config-software.yml
+++ b/_data/forms/config-software.yml
@@ -11,6 +11,7 @@ formGroups:
   - preset: licences
     param: {more: true}
   - preset: empty
+  - preset: empty
     title: administrations
     param: {start: true}
   - preset: adminCode
