--- a/_data/forms/config-design.yml
+++ b/_data/forms/config-design.yml
@@ -14,6 +14,7 @@ formGroups:
     param: {type: url}
   - preset: licences
     param: {more: true}
+  - preset: empty
   - preset: team
   - preset: empty
     title: uses
