made it worse, so return

--- a/_data/forms/config-design.yml
+++ b/_data/forms/config-design.yml
@@ -15,6 +15,7 @@ formGroups:
   - preset: licences
     param: {more: true}
   - preset: team
+  - preset: empty
     title: uses
     param: {start: true}
   - preset: contact
