--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,9 @@ jobs:
     - name: repo-sync
       uses: wei/git-sync@v1
       env:
-        SOURCE_REPO: "https://github.com/canada-ca/ore-ero"
+        SOURCE_REPO: "canada-ca/ore-ero"
         SOURCE_BRANCH: "master"
-        DESTINATION_REPO: "https://github.com/canada-ca/ore-ero-fr"
+        DESTINATION_REPO: "canada-ca/ore-ero-fr"
         DESTINATION_BRANCH: "master"
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       with:
         args: $SOURCE_REPO $SOURCE_BRANCH $DESTINATION_REPO $DESTINATION_BRANCH
