--- a/.github/workflows/sync-french.yml
+++ b/.github/workflows/sync-french.yml
@@ -29,6 +29,5 @@ jobs:
         cd french
         git config --global user.email "canada.pr.bot@gmail.com"
         git config --global user.name "canada-bot"
-        git reset --hard origin/master
-        git commit --amend --no-edit
+        git commit --amend --no-edit -i
         git push -f || fatal "Error pushing the French Mirror"
