--- a/.github/workflows/sync-french.yml
+++ b/.github/workflows/sync-french.yml
@@ -23,11 +23,11 @@ jobs:
         ref: master
         token: ${{ secrets.PUSH_API_TOKEN }}
     - name: Copy files from English to French
-      run: rsync -avr --exclude=*.git/* --exclude=*.github/* --exclude='*/CNAME' english french
+      run: rsync -avr --exclude=*.git/* --exclude=*.github/* --exclude='*/CNAME' french english
     - name: Push back changes to French repo
       run: |
         cd french
         git config --global user.email "canada.pr.bot@gmail.com"
         git config --global user.name "canada-bot"
-        git commit --amend --no-edit -i
+        git commit --amend --no-edit
         git push -f || fatal "Error pushing the French Mirror"
